# Carcassonne

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  setup.cfg
docs/: codeofconduct.md  conf.py  index.md  requirements.txt  usage.md
src/carcassonne/: __init__.py  entrypoint.py  sets.py
