[tool.poetry]
name = "carcassonne"
version = "0.1.0"
description = "Generate carcassonne tiles"
authors = ["jens persson <jens@persson.cx>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.6"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
sphinx = "^7.0.1"
nox = "^2023.4.22"
myst-parser = "^2.0.0"
sphinx-click = "*"
sphinxcontrib-applehelp = "*"
sphinxcontrib-devhelp = "*"
sphinxcontrib-htmlhelp = "*"
sphinxcontrib-jsmath = "*"
sphinxcontrib-qthelp = "*"
sphinxcontrib-serializinghtml = "*"
sphinx-autodoc2 = {extras = ["cli"], version = "^0.5.0"}
safety = "^2.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
carcassonne_sets = "carcassonne.entrypoint:generate_sets"
carcassonne_helper = "carcassonne.entrypoint:helper"

[tool.pylint.logging]
# The type of string formatting that logging methods do. `old` means using %
# formatting, `new` is for `{}` formatting.
logging-format-style = "fstr"