[tool.poetry]
name = "carcassonne"
version = "0.1.0"
description = "Generate carcassonne tiles"
authors = ["jens persson <jens@persson.cx>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.6"

[tool.poetry.group.dev.dependencies]
sphinx = "*"
nox = "*"
myst-parser = "*"
sphinx-click = "*"
sphinxcontrib-applehelp = "*"
sphinxcontrib-devhelp = "*"
sphinxcontrib-htmlhelp = "*"
sphinxcontrib-jsmath = "*"
sphinxcontrib-qthelp = "*"
sphinxcontrib-serializinghtml = "*"
sphinx-autodoc2 = { extras = ["cli"], version = "*" }
ruff = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
carcassonne_sets = "carcassonne.entrypoint:generate_sets"
carcassonne_helper = "carcassonne.entrypoint:helper"
carcassonne_tiler = "carcassonne.entrypoint:tiler"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "S311",   # This is not crypto code
    "G004",   # Allow logging statement uses f-string
    "W191",   # Not recomended with auto formating
    "E111",   # Not recomended with auto formating
    "E114",   # Not recomended with auto formating
    "E117",   # Not recomended with auto formating
    "D206",   # Not recomended with auto formating
    "D300",   # Not recomended with auto formating
    "Q000",   # Not recomended with auto formating
    "Q001",   # Not recomended with auto formating
    "Q002",   # Not recomended with auto formating
    "Q003",   # Not recomended with auto formating
    "COM812", # Not recomended with auto formating
    "COM819", # Not recomended with auto formating
    "ISC001", # Not recomended with auto formating
    "ISC002", # Not recomended with auto formating
]

[tool.ruff.lint.pydocstyle]
convention = "google"
